# TestConstructor

./: Dockerfile  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  testJS.js  urls.txt
alembic/: env.py
alembic/versions/: 2025_03_13_1434-d67f0ee803a2_create_tables.py  2025_03_13_1451-4516f9c324b5_create_tables.py  2025_03_17_2101-69381782b56e_create_tables_without_user_role.py  2025_03_17_2225-7c37ffa6d12d_create_tables.py  2025_03_19_2234-1379e38a553d_create_table_tested_user.py  2025_03_20_1002-9cadbc475ba3_create_table_tested_user.py  2025_03_22_1130-7cf2ef32a426_fix_keys.py  2025_04_02_1530-30e596b013d1_add_param_passing_score.py  2025_04_20_2209-6a230117fe94_add_duration_to_test.py  2025_05_20_2033-cf48bcd91367_email_not_unique.py  2025_06_11_2102-7f4a94583803_add_str_type_to_is_correct.py
src/: __init__.py  main.py  models.py  schemas.py
src/api/: deps.py  jwt_utils.py  sending_result.py  utils.py
src/api/routers/: __init__.py  auth.py  crm.py  editor.py  tested_users.py  tests.py  users.py
src/core/: config.py  database.py  security.py
src/crud/: crm_crud.py  tests_crud.py  users_crud.py
src/models/: __init__.py  editor.py  tests.py  users.py
src/schemas/: __init__.py  editor.py  init.py  options.py  questions.py  results.py  tested_users.py  tests.py  timestamp.py  users.py
