[project]
name = "testconstructor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.1",
    "alembic~=1.15.1",
    "asyncpg>=0.30.0",
    "dotenv~=0.9.9",
    "fastapi~=0.115.11",
    "jwt~=1.3.1",
    "passlib~=1.7.4",
    "pydantic~=2.10.6",
    "pydantic-core~=2.27.2",
    "pydantic-settings>=2.9.1",
    "python-dotenv~=1.0.1",
    "sqlalchemy~=2.0.38",
    "uvicorn~=0.34.0",
]
